project/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pod-nginx
  namespace: project
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx 
    spec:
      containers:
      - image: nginx 
        name: nginx
        ports:
        - containerPort: 80
