project/pod-nginx.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-nginx
  namespace: project
  labels:
   app: nginx
spec:
  containers:
  - image: nginx 
    name: nginx
    ports:
    - containerPort: 80
