project/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: service-for-nginx
  namespace: project
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
